Fixed: wflow-consoleweb - Userview Builder - Content editing bar is covered by page elements when scroll down. @8.0-SNAPSHOT

--- a/wflow-consoleweb/src/main/webapp/css/ubuilder.css
+++ b/wflow-consoleweb/src/main/webapp/css/ubuilder.css
@@ -41,6 +41,7 @@ body {
     top:0;
     width: 100%;
     background: #fff;
+    z-index: 1;
 }
 #page.page-content-wrapper main {
     padding: 20px;
